<resources>
    <string name="app_name">SecondCoordinator</string>
    <string name="action_settings">Settings</string>
    <string name="action_edit">Edit</string>
    <string name="action_share">Share</string>
    <string name="fab">FloatingActionButton</string>
    <string name="show_toast">toast</string>
    <string name="app_bar">AppBarLayout</string>
    <string name="tool_bar_title">Toolbar</string>
    <string name="tool_bar_sub_title">Sub title</string>
    <string name="collapsing">CollapsingToolbarLayout</string>
    <string name="collapsing_title">Collapsing</string>
    <string name="behavior">MyBehavior</string>
    <string name="cardView">CardView</string>
    <string name="card_string">First thing to do include Android Design Support Library in out project in out project is to add a line of dependency code in app\'s build.gradle file.</string>
    <string name="action_list">List显示</string>
    <string name="action_grid">Grid显示</string>
    <string name="action_staggered">瀑布流显示</string>
    <string name="desc">展示图片</string>
    <string name="undo">undo</string>
    <string name="gone_statusBar">隐藏状态栏</string>
    <string name="visible_statusBar">显示状态栏</string>
    <string name="input_name">输入帐号</string>
    <string name="input_password">输入密码</string>
    <string name="card_view">CardView</string>
    <string name="notification">Notification</string>
</resources>
