<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cl_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.fj.second.MainActivity">

    <Button
        android:id="@+id/bt_fab"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fab"
        android:textAllCaps="false"/>

    <Button
        android:id="@+id/bt_appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/bt_fab"
        android:text="@string/app_bar"
        android:textAllCaps="false"/>

    <Button
        android:id="@+id/bt_collapsing"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/bt_appbar"
        android:text="@string/collapsing"
        android:textAllCaps="false"/>

    <Button
        android:id="@+id/bt_behavior"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/bt_collapsing"
        android:text="@string/behavior"
        android:textAllCaps="false"/>

    <Button
        android:id="@+id/bt_model"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/bt_behavior"
        android:text="@string/gone_statusBar"/>
</RelativeLayout>
